--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,6 @@ nav:
   home: /
   about: /about/
   articles: /archives/
-  projects: http://github.com/probberechts
 
 
 # Links to your social media accounts.
@@ -28,25 +27,9 @@ nav:
 # 'icon' value will be used as title when 'label' is missing.
 social_links:
   -
-    icon: github
-    link: http://github.com/probberechts/cactus-dark
-  -
-    icon: twitter
-    link: /
-  -
-    icon: facebook
-    link: /
-  -
-    icon: mail
-    link: mailto:name@email.com
-  -
-    icon: mastodon
-    label: mastodon.social
-    link: https://mastodon.social/@alice
-  -
-    icon: mastodon
-    label: fosstodon.org
-    link: https://fosstodon.org/@alice
+    icon: instagram
+    link: https://www.instagram.com/floodofpages/
+
 
 # Customize the overview with displaying a tagcloud on the index page.
 # Options: https://hexo.io/docs/helpers.html#tagcloud
