--- a/_config.yml
+++ b/_config.yml
@@ -108,10 +108,10 @@ favicon:
     url: /images/favicon.ico
     gravatar: false
   android:
-    url: /images/favicon-192x192.png
+    url: /images/newicon.png
     gravatar: false
   apple:
-    url: /images/apple-touch-icon.png
+    url: /images/newicon.png
     gravatar: false
 
 # The color scheme that should be used to highlight codeblocks.
