--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,8 @@ nav:
   home: /
   about: /about/
   articles: /archives/
+  tag: /tags/
+  category: /categories/
 
 
 # Links to your social media accounts.
