--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,7 @@ logo:
   enabled: true
   width: 50
   height: 50
-  url: /images/logo.png
+  url: /images/newicon.png
   gravatar: false
   grayout: true
 
