--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ nav:
   home: /
   about: /about/
   articles: /archives/
-  tag: /tags/
-  category: /categories/
+  Tags: /tags/
+  Categories: /categories/
 
 
 # Links to your social media accounts.
@@ -89,7 +89,7 @@ error_404:
 #   - gravatar: whether to use your Gravatar as the logo
 #   - grayout: whether to enable a hover effect on the logo
 logo:
-  enabled: true
+  enabled: false
   width: 50
   height: 50
   url: /images/newicon.png
