--- a/_config.yml
+++ b/_config.yml
@@ -167,8 +167,8 @@ utterances:
 
 # Fill in your Google Analytics tracking ID to enable Google Analytics.
 google_analytics:
-  enabled: true
-  id: G-7SNK0WHB97
+  enabled: false
+  id: 
 
 # Fill in your Baidu Analytics tracking ID to enable Baidu Analytics.
 baidu_analytics:
